--- a/index.html
+++ b/index.html
@@ -5,17 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 1,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 48
+        }
+    </style>
 </head>
 <body>
     <main>
         <section id="login">
             <div id="img">
-                Foto
+                <!-- Imagem de Background -->
             </div>
             <div id="form">
-                Login
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="login.php" method="post">
+                    <div class="campo">
+                        <label for="iemail"><span class="material-symbols-outlined">person</span></label>
+                        <input type="email" name="email" id="iemail" placeholder="seu e-mail">
+                    </div>
+
+                    <div class="campo">
+                        <label for="isenha"><span class="material-symbols-outlined">password</span></label>
+                        <input type="password" name="senha" id="isenha" min="8" max="20" placeholder="sua senha">
+                    </div>
+
+                    <div>
+                        <input type="submit" value="Entrar" id="bntEntrar">
+                    </div>
+                    <div>
+                        <input type="submit" value="Esqueci a senha &#xe158;" id="bntEsqSenha">
+                    </div>
+                </form>
             </div>
         </section>
     </main>
