--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <form action="login.php" method="post">
                     <div class="campo">
                         <label for="iemail"><span class="material-symbols-outlined">person</span></label>
-                        <input type="email" name="email" id="iemail" placeholder="seu e-mail">
+                        <input type="email" name="email" id="iemail" required placeholder="seu e-mail">
                     </div>
 
                     <div class="campo">
                         <label for="isenha"><span class="material-symbols-outlined">password</span></label>
-                        <input type="password" name="senha" id="isenha" min="8" max="20" placeholder="sua senha">
+                        <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" placeholder="sua senha">
                     </div>
 
                     <div>
