--- a/index.html
+++ b/index.html
@@ -29,21 +29,23 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <label for="iemail"><span class="material-symbols-outlined">person</span></label>
+                        <span class="material-symbols-outlined">person</span>
                         <input type="email" name="email" id="iemail" required placeholder="seu e-mail" autocomplete="email">
+                        <label for="iemail"></label>
                     </div>
 
                     <div class="campo">
-                        <label for="isenha"><span class="material-symbols-outlined">password</span></label>
+                        <span class="material-symbols-outlined">vpn_key</span>
                         <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" placeholder="sua senha" autocomplete="current-password">
+                        <label for="isenha"></label>
                     </div>
 
                     <div>
                         <input type="submit" value="Entrar" id="bntEntrar">
                     </div>
-                    <div>
-                        <input type="submit" value="Esqueci a senha &e158;" id="bntEsqSenha">
-                    </div>
+                    <a href="#" id="bntEsqSenha">
+                        Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                    </a>
                 </form>
             </div>
         </section>
