Página do Usuario

--- a/acesso.html
+++ b/acesso.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="estilos/acesso.css">
+    <link rel="stylesheet" href="estilos/acessoMQ.css">
+    
     <title>Acesso</title>
 </head>
 <body>
-    <p>Acessado</p>
+    <main>
+        <section id="hub">
+            <article id="foto">
+                <span class="material-symbols-outlined" id="user">person</span>
+            </article>
+            <article id="info">
+                <p id="nome"><strong>Nome completo</strong></p>
+                <div class="containerInfo">
+                    <p class="txtinfo" id="identficacao">ID: 1234</p>
+                    <p class="txtinfo" id="idade">Idade: 55</p>
+                    <p class="txtinfo" id="sexo">Sexo: Masculino</p>
+                    <p class="txtinfo txtGrande" id="endereco">Endereço: Rua XX, XXX, Bairro XXX</p>
+                </div>
+            </article>
+
+            <a href="index.html" id="bntPrinc">Voltar</a>
+        </section>
+    </main>
 </body>
 </html>
