--- a/index.html
+++ b/index.html
@@ -7,26 +7,18 @@
     <title>Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/media-query.css">
-    <style>
-        .material-symbols-outlined {
-          font-variation-settings:
-          'FILL' 1,
-          'wght' 400,
-          'GRAD' 0,
-          'opsz' 48
-        }
-    </style>
+        <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
-        <section id="login">
+        <section id="hub">
             <div id="img">
                 <!-- Imagem de Background -->
             </div>
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
+                <div id="res"></div>
                 <form action="" method="GET" autocomplete="on"> <!--Mudar o method depois-->
                     <div class="campo">
                         <span class="material-symbols-outlined">person</span>
