--- a/recuSenha.html
+++ b/recuSenha.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <section id="login">
+        <section id="hub">
             <div id="aviso">
                 <h1>Recuperação de Senha</h1>
                 <p>Email: exemplo@gmail.com</p>
